# morbid-monarchy

./: .gitignore  .windsurfrules  Cargo.toml  LICENSE  README.md
.zed/: debug.json
crates/cellular-landscape/: Cargo.toml
crates/cellular-landscape/src/: core.rs  lib.rs  prelude.rs
crates/cellular-landscape/src/core/: entities.rs  events.rs  generation.rs  physics.rs  simulation.rs  utils.rs  world.rs
crates/mm-app/: Cargo.toml
crates/mm-app/src/: lib.rs  main.rs  world_persistence.rs  world_runtime.rs
crates/mm-core/: Cargo.toml
crates/mm-core/src/: lib.rs  player.rs  systems.rs
crates/mm-core/src/world/: generation.rs  mod.rs  types.rs
crates/monarch-asset/: Cargo.toml
crates/monarch-engine/: Cargo.toml
crates/monarch-engine/src/: core.rs  engine.rs  lib.rs  prelude.rs  world.rs
crates/monarch-engine/src/core/: events.rs  simulation.rs  world.rs
crates/monarch-engine/src/core/entities/: observer.rs  spherical.rs
crates/monarch-engine/src/core/physics/: grid_physics.rs  materials.rs
crates/monarch-engine/src/core/simulation/: biology_sim.rs  fire_sim.rs  granular_sim.rs  liquid_sim.rs
crates/monarch-engine/src/core/world/: cell.rs
crates/monarch-engine/src/engine/: entities.rs  events.rs  generation.rs  physics.rs  simulation.rs  utils.rs  world.rs
crates/monarch-engine/src/engine/entities/: observer.rs  spherical.rs  utils.rs
crates/monarch-engine/src/engine/generation/: world_gen.rs
crates/monarch-engine/src/engine/physics/: grid_api.rs  grid_physics.rs  materials.rs
crates/monarch-engine/src/engine/simulation/: biology_sim.rs  corruption_sim.rs  fire_sim.rs  granular_sim.rs  liquid_sim.rs  meta.rs  water_sim.rs
crates/monarch-engine/src/engine/world/: cell.rs  chunk.rs  generation.rs  grid.rs
crates/monarch-engine/src/world/: active.rs  cell.rs  chunk.rs  entity.rs  events.rs  generation.rs  grid.rs  simulation.rs  types.rs
crates/morbid-app/: Cargo.toml
crates/morbid-app/assets/shaders/: world.wgsl
crates/morbid-app/assets/shaders/landscape/: common.wgsl  fluid.wgsl  granular.wgsl  surface.wgsl  terrain.wgsl
crates/morbid-app/src/: database.rs  lib.rs  main.rs  render.rs  runtime.rs  streaming.rs  world_io.rs
crates/morbid-app/src/runtime/: dev_tools.rs  entities.rs  hooks.rs  input.rs  persistence.rs  render.rs
crates/morbid-app/src/runtime/dev_tools/: brush.rs  ui.rs
crates/spatial-lib/: Cargo.toml
crates/spatial-lib/src/: chunk.rs  grid.rs  lib.rs  manager.rs  math.rs  storage.rs  store.rs
crates/spatial-lib/src/chunk/: manager.rs  storage.rs
doc/: CHANGELOG.md  ai-render-bandwith-fix.md  architecture.md  persona.md  world_physics_vision.md
doc/execs/: exec_audit.md  exec_cleanup.md  exec_idea.md  exec_newborn.md  exec_restructure.md
doc/ideas/: 2026-03-26-barebone-2d-world.md  2026-03-27-procedural-chunked-world.md  2026-03-27-rasterized-world-pivot.md
docs/: architecture.md  persona.md  rules.md
docs/knowledge/: project_knowledge.md  rust_knowledge.md
(+14 files in other folders)
