[workspace]
members = [
    "crates/morbid-app",
    "crates/monarch-engine"
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.18.1", features = ["serialize"] }
bitcode = { version = "0.6.9", features = ["derive"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
lru = "0.16.3"
rand = "0.10.0"
rustc-hash = "2.1.2"
redb = "4.0.0"
noise = "0.9.0"

monarch-engine = { path = "crates/monarch-engine" }
morbid-app = { path = "crates/morbid-app" }
