[workspace]
members = [
    "crates/morbid-app",
    "crates/monarch-engine",
    "crates/spatial-lib",
    "crates/cellular-landscape",
]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.19", features = ["serialize"] }
bevy_egui = { version = "0.41.0" }
bitcode = { version = "0.6.9", features = ["derive"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
lru = "0.16.3"
rand = "0.10.0"
rustc-hash = "2.1.2"
redb = "4.0.0"
noise = "0.9.0"
rayon = "1.12.0"
flume = "0.12.0"
glam = "0.32.0"

monarch-engine = { path = "crates/monarch-engine" }
morbid-app = { path = "crates/morbid-app" }
spatial-lib = { path = "crates/spatial-lib" }
cellular-landscape = { path = "crates/cellular-landscape" }
