[package]
name = "mm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_math = { workspace = true }
bevy_transform = { workspace = true }
bitcode = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }