[package]
name = "monarch-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }
noise = { workspace = true }
rustc-hash = { workspace = true }
lru = { workspace = true }
bitcode = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true }
