[package]
name = "morbid-app"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
monarch-engine.workspace = true
bitcode.workspace = true
bytemuck.workspace = true
redb.workspace = true
bevy_egui.workspace = true
spatial-lib.workspace = { features = ["redb-storage"] }

[lib]
name = "morbid_app"
path = "src/lib.rs"
